--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:yourpassword@localhost:5432/fleetflow?schema=public"
+DATABASE_URL="postgresql://postgres:Jash%401409@localhost:5432/fleetflow_core?schema=public"
 JWT_SECRET="fleetflow_jwt_secret_key_change_in_production"
 JWT_EXPIRES_IN="7d"
 PORT=5000
